|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2019, PHP 7.2.18

- CLI:
  . Fixed bug #77794 (Incorrect Date header format in built-in server).
    (kelunik)

- Interbase:
  . Fixed bug #72175 (Impossibility of creating multiple connections to
    Interbase with php 7.x). (Nikita)

- phpdbg:
  . Fixed bug #76801 (too many open files). (alekitto)

- Reflection:
  . Fixed bug #77772 (ReflectionClass::getMethods(null) doesn't work). (Nikita)

- Standard:
  . Fixed bug #77680 (recursive mkdir on ftp stream wrapper is incorrect).
    (Vlad Temian)

04 Apr 2019, PHP 7.2.17

- Core:
  . Fixed bug #77738 (Nullptr deref in zend_compile_expr). (Laruence)
  . Fixed bug #77660 (Segmentation fault on break 2147483648). (Laruence)
  . Fixed bug #77652 (Anonymous classes can lose their interface information).
    (Nikita)
  . Fixed bug #77676 (Unable to run tests when building shared extension on
    AIX). (Kevin Adler)

- Bcmath:
  . Fixed bug #77742 (bcpow() implementation related to gcc compiler
    optimization). (Nikita)

- COM:
  . Fixed bug #77578 (Crash when php unload). (cmb)

- Date:
  . Fixed bug #50020 (DateInterval:createDateFromString() silently fails).
    (Derick)
  . Fixed bug #75113 (Added DatePeriod::getRecurrences() method). (Ignace
    Nyamagana Butera)

- FPM:
  . Fixed bug #77677 (FPM fails to build on AIX due to missing WCOREDUMP).
    (Kevin Adler)

- GD:
  . Fixed bug #77700 (Writing truecolor images as GIF ignores interlace flag).
    (cmb)

- MySQLi:
  . Fixed bug #77597 (mysqli_fetch_field hangs scripts). (Nikita)

- Opcache:
  . Fixed bug #77691 (Opcache passes wrong value for inline array push
    assignments). (Nikita)
  . Fixed bug #77743 (Incorrect pi node insertion for jmpznz with identical
    successors). (Nikita)

- phpdbg:
  . Fixed bug #77767 (phpdbg break cmd aliases listed in help do not match
    actual aliases). (Miriam Lauter)

- sodium: