@@ -232,7 +232,7 @@ PHPDBG_API void phpdbg_export_breakpoints_to_string(char **str) /* {{{ */
 		} ZEND_HASH_FOREACH_END();
 	}
 
-	if (!(*str)[0]) {
+	if ((*str) && !(*str)[0]) {
 		*str = NULL;
 	}
 } /* }}} */
@@ -812,6 +812,21 @@ static inline void phpdbg_create_conditional_break(phpdbg_breakcond_t *brake, co
 	phpdbg_breakcond_t new_break;
 	uint32_t cops = CG(compiler_options);
 	zval pv;
+
+	switch (param->type) {
+	    case STR_PARAM:
+		case NUMERIC_FUNCTION_PARAM:
+		case METHOD_PARAM:
+		case NUMERIC_METHOD_PARAM:
+		case FILE_PARAM:
+		case ADDR_PARAM:
+		    /* do nothing */
+		break;
+		
+		default:
+			phpdbg_error("eval", "type=\"invalidparameter\"", "Invalid parameter type for conditional breakpoint");
+			return;
+	}
 
 	PHPDBG_BREAK_INIT(new_break, PHPDBG_BREAK_COND);
 	new_break.hash = hash;
